--- a/BookShop/appsettings.json
+++ b/BookShop/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BookShopContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BookShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "MailSettings": {
+    "User": "appdev22demo@gmail.com",
+    "Name": "Joaquin Little",
+    "Pass": "Duytuan@123",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
+
 }
